# diplomaa_KomissarenkoVM

./: .env  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: Makefile  docker-compose.yaml  main.py
app/config/: __init__.py  _asset_path.py
app/monitoring/client/: Dockerfile  client.py  sys_info.py
app/pc_info/: desktop_info.py  sys_info.py
app/ui/: frmMain.py  server.py
app/ui/custom_widgets/: dot_widget.py
src/: main.py
src/app/: main.py
src/app/pc_info/: desktop_info.py  sys_info.py
src/app/ui/: frmMain.py
src/app/ui/custom_widgets/: __init__.py  dot_widget.py
src/pc_info/: __init__.py  desktop_info.py  sys_info.py
telegram/: .env  alembic.ini  docker-compose.yml  main.py
telegram/migration/: env.py
telegram/src/: inline_buttons.py  states.py  utils.py
telegram/src/config/: _logger.py  settings.py
telegram/src/filters/: __init__.py  user_filters.py
telegram/src/handlers/: __init__.py  base_command_handler.py  call_back_handler.py  command_handler.py
telegram/src/handlers/command_handler/: __init__.py  admin.py  engineer.py  professor.py
telegram/src/mongo/: __init__.py  client.py  task.py  task_repository.py
telegram/src/postgres/: __init__.py  _engine.py  models.py
telegram/src/postgres/crud/: __init__.py  create.py  delete.py  read.py
