[project]
name = "diplomaa-komissarenkovm"
version = "0.1.0"
description = ""
authors = [
    {name = "BimBimBamBam1337",email = "a94440003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psutil (>=7.0.0,<8.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "pyqt6 (>=6.9.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "diplomaa_komissarenkovm", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
