[project]
name = "diplomaa-komissarenkovm"
version = "0.1.0"
description = ""
authors = [
    {name = "BimBimBamBam1337",email = "a94440003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "psutil (>=7.0.0,<8.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "pyqt6 (>=6.9.0,<7.0.0)",
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "motor (>=3.7.0,<4.0.0)",
    "beanie (>=1.29.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "diplomaa_komissarenkovm", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
